<resources>
    <string name="app_name">KIN Blood</string>

    <!--<string name="app_name">SplashScreen</string>-->

    <!--These strings for Splash Screen(Welcome Activity)-->

    <string name="title_activity_welcome">Home Screen</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="done">GOT IT</string>

    <string name="slide_1_title">Be a Donor</string>
    <string name="slide_1_desc">I am the coolest vampire you have ever seen</string>.

    <string name="slide_2_title">Donate Blood</string>
    <string name="slide_2_desc">Ladies first,OK!?</string>

    <string name="slide_3_title">Manage Blood</string>
    <string name="slide_3_desc">A Heart for all</string>

    <string name="slide_4_title">Inspire People</string>
    <string name="slide_4_desc">Oh,Come On</string>

    <string name="play_again">Play Again</string>

    <!--These strings for Navigation Drawer-->


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>


    <!--Navigation drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_all_donor">All</string>
    <string name="nav_unavailable_donor">Unavailable</string>
    <string name="nav_ex_donor">Ex-Donor</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_privacy_statement">Privacy Statement</string>

    <!-- Toolbar titles when navigation menu item is selected-->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>History</item>
        <item>All</item>
        <item>Unavailable</item>
        <item>Ex-Donor</item>
    </string-array>

    <string-array name="blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_statement">Privacy Statement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_name">KIN SUST</string>
    <string name="user_email">kinsust03@gmail.com</string>
    <string name="title_activity_donor_info">DonorInfoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
